--- a/package.json
+++ b/package.json
@@ -6,12 +6,8 @@
   "author": {
     "name": "Cadmos"
   },
-  "unity": "2022.3",
+  "unity": "6000.0.21f",
   "type": "tool",
   "documentationUrl": "",
-  "dependencies": {
-    "com.unity.burst": "1.6.0",
-    "com.unity.collections": "1.2.0",
-	"com.unity.mathematics": "1.2.0"
-  }
+  "dependencies": {}
 }
