Trying to fix SemVer issues

--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "com.lf.interfaces",
   "version": "0.1.0",
   "displayName": "LF Interfaces",
-  "description": "This package provides a Task Enqueue/Dequeue system for Unity",
+  "description": "This package provides the interfaces for Little Fishers packages",
   "author": {
     "name": "Cadmos"
   },
   "unity": "6000.0",
-  "type": "tool",
-  "documentationUrl": ""
+  "type": "library",
+  "documentationUrl": "",
+  "dependencies": {
+  }
 }
